--- a/style.css
+++ b/style.css
@@ -10,6 +10,17 @@ body{
     font-family: 'Space Mono',monospace;
 }
 
+.logo{
+    text-align: center;
+    margin-top: 1.7rem;
+    margin-bottom: 2.3rem;
+}
 
-
+.tip-calculator{
+    background-color:white;
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+    border-radius: 1.4rem 1.4rem 0 0;
+}
 
