--- a/style.css
+++ b/style.css
@@ -84,6 +84,40 @@ input{
 
 .result{
     background-color: hsl(183, 100%, 15%);
-    color: white
+    color: white;
+    padding: 39px 21px;
+    border-radius: 12px;
 }
+
+.tip-amount , .total{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 1.7rem;
+}
+
+.person{
+    font-size: 12px;
+    color: hsl(184, 14%, 56%);
+    font-weight: 700;
+}
+
+.amount{
+    font-size: 28px;
+    color: hsl(172, 67%, 45%);
+    font-weight: 700;
+}
+
+.reset{
+    text-align: center;
+    font-size: 20px;
+    font-weight: 700;
+    color: hsl(183, 100%, 15%);
+    background-color: hsl(172, 67%, 45%);
+    padding: 9px 0 9px 0;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+
 
